--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Document</title>
 </head>
 <body>
-    <img alt="Image of me?" src="C:\Users\sarsa\Pictures\Camera Roll\WIN_20210417_13_39_19_Pro.jpg" >
-    <h1>About me, Nathan Schmitz!</h1>
-    <h2>Me and my life...</h2>
-    <p>
-        Im 27 years old and live in Denver Colorado with my two parakeets.
-        I love the outdoors like camping, rock climbing, hunting, and riding my motorcylce.
-        My degree that i'm pursuing is a bachelors in applied technology. 
-        I love code and making things and thats why i'm pursuing this degree.
-        I work full time for Bobcat equipment and would like to stay in the industry after i graduate.
-        I want to make code and programs for software on our machines someday. 
-
-    </p>
-
+    <h1>Welcome to WDD130 Web Projects</h1>
+<nav>
+  <a href="aboutme/index.html">About Me Page</a>             
+  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="positioning.html">Positioning Activity</a>
+  <a href="#">Personal Website</a>
+  <a href="#">Personal Siteplan</a>
+</nav>
 </body>
 </html>
