--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -7,7 +7,7 @@
     <title>About Me</title>
 </head>
 <body>
-    <img alt="Image of me?" src="WIN_20210417_13_39_19_Pro.jpg" >
+    <img alt="Image of me?" src="aboutme\images\nathanpic.jpp.jpg" >
     
     <nav>
         <a href="aboutme/index.html">About Me Page</a>             
