--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -7,7 +7,7 @@
     <title>About Me</title>
 </head>
 <body>
-    <img alt="Image of me?" srcset="nathanpic.jpp.jpg" >
+    <img src="nathanpic.jpp.jpg" alt="Nathan" style="width:128px;height:128px;">
     
     <nav>
         <a href="aboutme/index.html">About Me Page</a>             
