--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+
+  <img src="aboutme\images\nathanpic.jpp.jpg" alt="Nathan" style="width:128px;height:128px;">
     <h1>Welcome to WDD130 Web Projects</h1>
 <nav>
   <a href="aboutme/index.html">About Me Page</a>             
