--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -32,6 +32,9 @@
         I want to make code and programs for software on our machines someday. 
         This is my site!!!!
 
+
+        im learning to love tv 
+
     </p>
 
 </body>
