--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -30,10 +30,7 @@
         I love code and making things and thats why i'm pursuing this degree.
         I work full time for Bobcat equipment and would like to stay in the industry after i graduate.
         I want to make code and programs for software on our machines someday. 
-        This is my site!!!!
-
-
-        im learning to love tv 
+        This is my site!!!!im learning to love tv 
 
     </p>
 
