--- a/wwr/index.html
+++ b/wwr/index.html
@@ -46,6 +46,18 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <section>
+            <img class="mountains" src="images/mountains.jpg" alt="mountains">
+            <h2>
+                More Than Just The thrill
+            </h2>
+            <p>
+                Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. 
+            </p>
+            
+            <link rel="Join Us" href="">
+            
+        </section>
     </main>
     <footer>
         <p>Dry Oar &copy; 2022 - Nathan schmitz</p>
