--- a/wwr/index.html
+++ b/wwr/index.html
@@ -55,7 +55,7 @@
                 Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. 
             </p>
             
-            <link rel="Join Us" href="">
+            <a href="contactus.html">Join US</a>
             
         </section>
     </main>
