--- a/wwr/index.html
+++ b/wwr/index.html
@@ -54,9 +54,9 @@
             <p>
                 Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. 
             </p>
-            <nav>
-                <a href="contactus.html">Join US</a>
-            </nav>
+            <p>
+                <a href="contactus.html">Join Us</a>
+            </p>
            
             
         </section>
