--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
         <img id="logo" src= "images/logo.png" alt="Dry Oar Logo">
@@ -46,19 +48,12 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
-        <section>
-            <img class="mountains" src="images/mountains.jpg" alt="mountains">
-            <h2>
-                More Than Just The thrill
-            </h2>
-            <p>
-                Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. 
-            </p>
-            <p>
-                <a href="contactus.html">Join Us</a>
-            </p>
-           
-            
+        <div id="background"></div> 
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+        <section class="msg">
+        <h2>More Than Just The Thrill</h2>
+        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+        <a class='join' href="rivers.html">Join Us</a>
         </section>
     </main>
     <footer>
@@ -77,5 +72,6 @@
             </a>
         </div>
     </footer>
+</div>
 </body>
 </html>
