--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -126,7 +126,7 @@
 
     <h3>[Page 2]</h3>
 
-    <img src="wwr\images\wireframe rafting nathan schmitz.PNG" alt="page 2 wireframe"> 
+    <img src="images\wireframe rafting nathan schmitz.PNG" alt="page 2 wireframe"> 
   </main>
 </body>
 
