--- a/nateweb/site-plan.html
+++ b/nateweb/site-plan.html
@@ -125,29 +125,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Here at NS Designs we can create you a magnificent website as magnificent as the rocky mountians!
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images\pexels-eberhard-grossgasteiger-1624504.jpg" alt="image for homepage">
+        <img src="images\pexels-jayant-kulkarni-683146.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Contact Us</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Contact us today or log onto facebook to reach us there!
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images\pexels-sebastian-palomino-1955134.jpg" alt="image for page">
+        <img src="images\pexels-pixabay-461593.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Examples</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Here are some examples of my work and previously done websites. 
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images\pexels-regina-jane-1824649.jpg" alt="image for page3">
+        <img src="images\pexels-tobias-bjørkli-2334533.jpg" alt="image for page3">
 
       </ul>
       <hr>
