--- a/nateweb/site-plan.html
+++ b/nateweb/site-plan.html
@@ -126,6 +126,8 @@
       <h3>Home page</h3>
       <p>
         Here at NS Designs we can create you a magnificent website as magnificent as the rocky mountians!
+        We specialize in small business website creation and can provide you with a variety of options. 
+        Go to our examples page to see what we have done in the past. 
       </p>
       <p>Images for the Home page</p>
         <img src="images\pexels-eberhard-grossgasteiger-1624504.jpg" alt="image for homepage">
@@ -135,6 +137,8 @@
       <h3>Contact Us</h3>
       <p>
         Contact us today or log onto facebook to reach us there!
+        You can also use our contact us form to reach us by email. 
+        Or call us at 000-000-0000 to schedule an appointment. 
       </p>
       <p>Images for the Page 2</p>
         <img src="images\pexels-sebastian-palomino-1955134.jpg" alt="image for page">
@@ -144,6 +148,8 @@
       <h3>Examples</h3>
       <p>
         Here are some examples of my work and previously done websites. 
+        We specialize in small buisnesses and local companies thoughout Denver.
+        If you would like to discuss your options go to our contact us page to reach us. 
       </p>
       <p>Images for the Page 3</p>
         <img src="images\pexels-regina-jane-1824649.jpg" alt="image for page3">
@@ -159,21 +165,20 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        This is the home page to welcome people to my site. 
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images\home page personal site.PNG" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The first child page is to show off my work from the past. It's also to get people interested in what i do. 
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images\childpage 1.PNG" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
+        This last page will be for contacting me. I know how to make a contact us form in html and javascript and i want to try and attempt to include that in here.     </p>
+      <img src="images\child page 2.PNG" alt="page 3 wireframe">
     </main>
   </body>
 
