--- a/nateweb/index.html
+++ b/nateweb/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NS Designs | Web Designer | Home</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles\styles.css">
 </head>
 <body>
     <div id="content">
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section class="nightmountain">
-            <img class="card-img" src="images\pexels-eberhard-grossgasteiger-1624504.jpg" alt="night mountians">
+            <img class="cardimg" src="images\pexels-eberhard-grossgasteiger-1624504.jpg" alt="night mountians">
             <p>
                 Here at NS Designs we can create you a magnificent website as magnificent as the rocky mountians!
         We specialize in small business website creation and can provide you with a variety of options. 
@@ -31,7 +31,7 @@
             </p>
         </section>
         <section class="homemountain">
-            <img class="card-img" src="images\pexels-jayant-kulkarni-683146.jpg" alt="home mountians">
+            <img class="homemountain" src="images\pexels-jayant-kulkarni-683146.jpg" alt="home mountians">
             
         </section>
 
