--- a/nateweb/examples.html
+++ b/nateweb/examples.html
@@ -30,6 +30,7 @@
         We specialize in small buisnesses and local companies thoughout Denver.
         If you would like to discuss your options go to our contact us page to reach us. 
     </div>
+    <div class="last"></div>
     </main>
     <footer>
         <p>NS Designs &copy; 2022 - Nathan schmitz</p>
