--- a/nateweb/contact.html
+++ b/nateweb/contact.html
@@ -37,7 +37,10 @@
             <button type="submit">Click here to cotact us by Email!</button>
          </form>
     
-
+         <p>
+            Make sure to tell us what you are looking for in website. Include colors, fonts, and pictures you would like to be in the website. 
+            Let us know and we will come up with a design that fits your needs. 
+         </p>
 
 
 
